--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                     <a class="nav-link text-dark" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="/contact">Contact</a>
+                    <a class="nav-link text-dark" href="/tasks">Tasks</a>
                 </li>
             </ul>
 
